Fix: styling navbar-collapse issue
By adding media query to it at min-width: 768px
@media (min-width: 768px) {
	.navbar-nav {
		float: none;
		display: flex;
		justify-content: space-between;
	}
}

--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,14 @@ body {
     margin: 0 auto;
 }
 
-.navbar-nav {
-	float: none;
-	display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+	.navbar-nav {
+		float: none;
+		display: flex;
+		justify-content: space-between;
+	}
 }
+
 
 .apple-logo {
 	width: 1.25em;
